till 15 no. tutorial dded

--- a/1-hello_world.html
+++ b/1-hello_world.html
@@ -10,12 +10,12 @@
         Hellow World!
     </h1>
 <!-- total 6 "h-Tag" hoten hai:-(h1>h2>h3>h4>h5>h6)
-    <h1></h1> sabse bara.
+    <h1></h1> sabse bara heading tag.
     <h2></h2>
     <h3></h3>
     <h4></h4>
     <h5></h5>
-    <h6></h6> sabse chota.
+    <h6></h6> sabse chota heading tag.
 -->
 </body>
 </html>
