--- a/11-ancher_tag(website-me-link-daalna).html
+++ b/11-ancher_tag(website-me-link-daalna).html
@@ -16,6 +16,12 @@
 
     <h1>Dusre Webpage ka link</h1>
     <a href="linked-webpage-with-11th-tutorial.html" target="_blank">click me to open another webpage</a>
+    
+    <h1>Email using ancher tag</h1>
+    <a href="mailto:arahamabeddin7@gmail.com">Mail Us</a>
+
+    <h1>Downlode file using ancher tag</h1>
+    <a href="file.pdf" download> Downlode my file </a>
 
 </body>
 </html>
