--- a/special_text_styling.html
+++ b/special_text_styling.html
@@ -6,7 +6,12 @@
     <title>Text styling Tags</title>
 </head>
 <body>
-    <!-- <b></b> : Bold tag , <i></i> : Italic tag , <u></u> : Underline tag , <del></del> : deleting tag (Ye tag kisi chij ko bich se likh karke cut karnekeliyeuse hota hai) -->
+    <!-- 
+        <b></b> : Bold tag ,
+        <i></i> : Italic tag ,
+        <u></u> : Underline tag ,
+        <del></del> : deleting tag (Ye tag kisi chij ko bich se likh karke cut karnekeliyeuse hota hai)
+     -->
     <h1>Text styling.</h1>
     <span>Lorem <del>ipsum dolor</del> <b>sit amet consectetur adipisicing</b> elit. Eligendi similique perspiciatis, <i>eos excepturi voluptates</i> fugit aliquam iure voluptas aliquid cumque, a nobis. <u>Magni enim nostrum</u> ut sapiente, beatae quidem quod.</span>
 </body>
