Added Subscript and Superscript.

--- a/some_special_tags.html
+++ b/some_special_tags.html
@@ -8,7 +8,7 @@
 <body>
     
 <!-- 
-    <pre></pre> ==> 'Pre-tag' , Ye ek aysa tag hai , jo is tag me jaysa bhi content likha huwa rehta hai ye use waysa hi website par display karta hai.
+    <pre></pre> ==> 'Pre-tag' , Ye ek aysa tag hai , jisme jo kuh bhi likha jaye ye se waysa hi web_page me display kardeta hai.
 -->
 
 <pre>
