Udated some errors in files.

--- a/10-list(unOrdere_list-Ordred_list).html
+++ b/10-list(unOrdere_list-Ordred_list).html
@@ -6,7 +6,7 @@
     <title>List</title>
 </head>
 <body>
-    <!-- Ordered List -->
+    <!-- (1).Ordered List -->
     <h1>Ordered List</h1>
     <ol>
         <li type="A">One</li>
@@ -17,7 +17,7 @@
         <li type="None">Six</li>
     </ol>
     
-    <!-- Unordered List -->
+    <!-- (2).Unordered List -->
     <!-- four types of Unordred list :
     disc 
     circle
@@ -36,9 +36,9 @@
     <!-- Description List -->
     <!-- dl: description list , dt: description table , dd: description data -->
     <h1>Description List</h1>
-    <dl>
-        <dt>Iphone</dt>
-        <dd>This Phone Contain A13 Bionic Chip.</dd>
+    <dl>    <!-- Description List -->
+        <dt>Iphone</dt> <!-- Description table -->
+        <dd>This Phone Contain A13 Bionic Chip.</dd>    <!-- Description data -->
         <dt>Apple</dt>
         <dd>Color of apple is red.</dd>
         <dt>Orange</dt>
