--- a/11-ancher_tag(website-me-link-daalna).html
+++ b/11-ancher_tag(website-me-link-daalna).html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ancher Tag</h1>
-    <!-- Ancher tag me target="_blank" ka prayog dusre window me, 'click kiye gaye link ko' open karnekeliye kiya jata hai. -->
+    <!-- Ancher tag me target="_blank" attribute ka prayog dusre window me, 'click kiye gaye link ko' open karnekeliye kiya jata hai. -->
     <a href="https://www.google.com/">Google</a>
     <a href="https://twitter.com/" target="_blank">Tweeter</a>
 
