--- a/13-Audio.html
+++ b/13-Audio.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Audio on web-page</h1>
     <!-- Notes :
-        Jatak humlog audio tag ke andar controls nahilikhenge tab tak hamara audio display nahi hoga.
+        Jabtak humlog audio tag ke andar me controls nahi likhenge tab tak hamara audio display nahi hoga.
     -->
     <!-- First way of adding audio(using 'audio-tag') on webpage: -->
     <audio src="https://www.pagalwrold.com/files/download/id/16343" controls autoplay muted >Song</audio>
