--- a/14-Table.html
+++ b/14-Table.html
@@ -11,8 +11,8 @@
     <!-- 
     1). Border : Ye wala atribute dene se hamare dwara banaye gaye gaye table me border aajata hai.
     2). bordercolor="red" : Ye hamare table ke border ke color ko red kardega.
-    3). Cellpadding="2px" : Ye wale atribute dene se hamare dwara banaye gaye  table me ptyek cells me padding aajata hai.
-    4). Cellspacing="5px" : Ye wala atribute dene se table ke cells ke bich me "space" aajata hai.
+    3). Cellpadding="2px" : Ye wale atribute dene se hamare dwara banaye gaye  table me pratyek cells me padding aajata hai.
+    4). Cellspacing="5px" : Ye wala attribute dene se table ke cells ke bich me "space" aajata hai.
     5).Rowspan="2" : Rowspan dene se hamare do rows merge hojaten hai.
     6).Colspan="2" : Colspan dene se hamare do columns merge hojaten hai.
 
