--- a/15-form.html
+++ b/15-form.html
@@ -8,9 +8,9 @@
 <body>
                                         <!-- form -->
 
-    <!-- id="" : data kis field ka hai use janne ke liye "id" ka use kiya jata hai. -->
-    <!-- name="" : kisi field ke accourding kya value server me aa raha hai use janne keliye humlog name atribte ka prayog karten hai.  -->
-    <!-- <label for=""></label> : Lable hame ye batlata hai ki form ke ield me kya fill karna hai hai. -->
+    <!-- id="" : 'data' form ke kis field ka hai use janne ke liye "id" ka use kiya jata hai. -->
+    <!-- name="" : kisi field ke accourding kya value server me aa raha hai use janne keliye humlog name attribte ka prayog karten hai.  -->
+    <!-- <label for=""></label> : Lable hame ye batlata hai ki form ke kis hisse me kya fill karna hai. -->
     <!-- <fieldset></fieldset> : fieldset ke andar me form ka code likhne se hamara ek form ka code dusre form ke code se saperate rehta hai.Aur ye hamare form me border bhi de deta hai -->
     <!-- <legend></legend>: Legend ke anadar hum jo likhten hai form ke border ke top left me show hota hai. -->
     <form>
@@ -61,7 +61,7 @@
         <!-- select your favourate color:
         <input type="color" name="" id=""> -->
         <!-- NOTE:
-            checkboxes me yadi same name hoto humlog ek hi jyada checkbox ko check(select) kar sakten hai.
+            checkboxes me yadi same name hoto humlog ek se jyada checkbox ko check(select) kar sakten hai.
         -->
         Select your favourate movies :
         <label for="Avenger">Avenger</label>
