--- a/3-Entities.html
+++ b/3-Entities.html
@@ -6,6 +6,7 @@
     <title>Entities</title>
 </head>
 <body>
+                                            <!-- Entities in html -->
     <h1>Entities</h1>
     <p>5 &gt; 2</p>  <!-- This will print 5>2 -->
 </body>
