--- a/4-emmet_and_speedy.html
+++ b/4-emmet_and_speedy.html
@@ -11,10 +11,10 @@
     <p class="mangu"></p> <!-- p.mango + Enter -->
     <p id="lila"></p> <!-- p#lila + Enter -->
     <p class="mina">kya haal hai bhai?</p> <!-- p.mina{kya haal hai bhai?} + Enter -->
-    <p id="tanisha">Tnisha is very good girl</p> <!-- p#tanisha{Tnisha is very good girl} + Enter -->
-    
+    <p id="tanisha">Tnisha is very good girl.</p> <!-- p#tanisha{Tnisha is very good girl} + Enter -->
+
     <div>
-        <p class="gimi">hi</p>
-    </div>   <!-- div>p.gimi{hi} -->
+        <p class="jimi">hi</p>
+    </div>   <!-- div>p.jimi{hi} -->
 </body>
 </html>
