--- a/2-element_tag_&_attribute.html
+++ b/2-element_tag_&_attribute.html
@@ -6,7 +6,7 @@
     <title>Element Tag and Attribute </title>
 </head>
 <body>
-    <h1>I'm an element </h1> <!-- tag ke bich me Element(Content) rahta hai -->
+    <h1>I'm an element </h1> <!-- opening aur closing tag ke bich me Element(Content) rahta hai -->
     <img src="https://th.bing.com/th/id/OIP.kfQpDUbqQpxDdHs4COHeIgHaF7?pid=ImgDet&rs=1" alt="fish" width="108">
     <!-- "src" aur "alt" , 'Attributes' hai jo tags ko additional power deten hai.-->
 </body>
