--- a/7-Inline_&_Block_element.html
+++ b/7-Inline_&_Block_element.html
@@ -6,10 +6,10 @@
     <title>Inline and Block level element </title>
 </head>
 <body>
-    <!-- Block level element : aysa element jo pura ka pura lock lele . ex : <div></div> , <h1></h1> , <p></p> -->
+    <!-- Block level element : Aysa element jo pura ka pura block lele . ex : <div></div> , <h1></h1> , <p></p> -->
     <h1>Hello World</h1>
     <h1>hola world</h1>
-    <!-- Inline Element :aysa element jo utna hi width le jitna jarurat hai ays elements ko inline element kehten hai. ex : <span></span>  -->
+    <!-- Inline Element : Aysa element jo utna hi width le jitna jarurat hai ayse elements ko inline element kehten hai. ex : <span></span>  -->
     <span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
     <span>Lorem ipsum dolor sit amet.</span>
     
