Correction done in html all iles

--- a/10-list(UnOrdere_List-&&-Ordred_list).html
+++ b/10-list(UnOrdere_List-&&-Ordred_list).html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
-    <!-- (1).Ordered List -->
+
+    <!-- (1). Ordered List -->
     <h1>Ordered List</h1>
     <ol>
         <li type="A">One</li>
@@ -16,25 +24,37 @@
         <li type="I">Five</li>
         <li type="None">Six</li>
     </ol>
-    
-    <!-- (2).Unordered List -->
-    <!-- four types of Unordred list :
-    disc 
-    circle
-    square
-    None -->
-    <h1>Unordered List</h1>
+ 
+
+
+    <!-- (2). Unordered List -->
+<!-- 
+***** four types of Unordred list :---
+
+    (1). disc 
+    (2). circle
+    (3). square
+    (4). None 
+-->
+
+    <h1> Unordered List </h1>
     <ul>
         <li type="disc">One</li>
         <li type="circle">Two</li>
         <li type="square">Three</li>
         <li type="None">Four</li>
-        <li type="">Five</li>
-        <li type="">Six</li>
+        <li type="">Five</li>   <!-- By default "Unordered List" ka type="disc" hota hai -->
+        <li type="">Six</li>   <!-- By default "Unordered List" ka type="disc" hota hai -->
     </ul>
 
-    <!-- Description List -->
-    <!-- dl: description list , dt: description table , dd: description data -->
+    <!-- (3). Description List -->
+    <!-- 
+        NOTE :---
+        dl: description list ,
+        dt: description table ,
+        dd: description data ,
+     -->
+
     <h1>Description List</h1>
     <dl>    <!-- Description List -->
         <dt>Iphone</dt> <!-- Description table -->
