--- a/14-Table.html
+++ b/14-Table.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tables and its property</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
                                             <!-- Table -->
 
     <!-- 
-    1). Border : Ye wala atribute dene se hamare dwara banaye gaye gaye table me border aajata hai.
-    2). bordercolor="red" : Ye hamare table ke border ke color ko red kardega.
-    3). Cellpadding="2px" : Ye wale atribute dene se hamare dwara banaye gaye  table me pratyek cells me padding aajata hai.
+    1). Border : Ye wala atribute dene se hamare dwara banaye gaye table me border aajata hai .
+    2). bordercolor="red" : Ye hamare table ke border ke color ko red kardega .
+    3). Cellpadding="2px" : Ye wale atribute dene se hamare dwara banaye gaye table ke sare cells me padding aajata hai.
     4). Cellspacing="5px" : Ye wala attribute dene se table ke cells ke bich me "space" aajata hai.
-    5).Rowspan="2" : Rowspan dene se hamare do rows merge hojaten hai.
-    6).Colspan="2" : Colspan dene se hamare do columns merge hojaten hai.
-
+    5).Rowspan="2" : Rowspan dene se hamare 2 rows merge hojaten hai.
+    6).Colspan="2" : Colspan dene se hamare 2 columns merge hojaten hai.
   -->
 
-    <table border cellpadding ="9px" cellspacing="5px" bordercolor="red">
+    <table border cellpadding ="9px" cellspacing="5px" bordercolor="yellow">
         <tr>
             <th>Srl. No.</th>
             <th>Sub-1</th>
