--- a/16-semantics_tag_of_html5.html
+++ b/16-semantics_tag_of_html5.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantics</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
+    <!-- 
+        (1). <header></header> : Is tag ka use humlog cotent ke "header" ko rakhne Keliye karten hai.
+     -->
     <header>
         <h2>This is the header:-</h2>
+        
+        <!-- 
+            (2). <nav></nav> : Is tag ka use humlog content ke "navigation bar" ko rakgne keliye karten hai.
+         -->
         <nav>
             <a href="#">1</a>
             <a href="#">2</a>
@@ -15,29 +29,42 @@
         </nav>
     </header>
 
+    <!-- 
+        (3). <article></article> : Is tag ka istamal humlog content ke "artical" ko rakhne keliye karten hai.
+     -->
     <article>
         <h1>This is article.</h1>
     </article>
 
+    <!-- 
+        (4). <aside></aside> : Is tag ka istamal humlog content ke " aside ( ==> left ya righr side me preasent content ko store karne )" keliye karten hai.
+     -->
     <aside>
         <p>This is first menu-1</p>
         <p>This is second menu-2</p>
     </aside>
 
+    <!-- 
+        (5). <main></main> : Is tag ka istamal humlog content ke "main-data" ko store karne keliye karten hai.
+     -->
     <main>
         <h3>This is main content.</h3>
     </main>
 
+<!-- 
+    (6). <details></details> : Is tag ka istamal humlog content ke "details" ko store karnekeliye karten hai.
+ -->
     <details>
         <summary>This is summary.</summary>
         this is details:
     </details>
 
+    <!-- 
+        (7). <footer></footer> : Is tag ka istamal humlog content ke "footer" ke portion ko rakhne keliye karten hai .
+     -->
     <footer>
         <h3>This is footer.</h3>
     </footer>
-
-
 
 </body>
 </html>
