--- a/17-application_of_semantics_in_real_project.html
+++ b/17-application_of_semantics_in_real_project.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application of simentic in real life project:--</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
     <header class="main-header">
@@ -18,7 +25,7 @@
     <main>
         <header>
             <h2>
-                We offer best couses at an lowest pric.
+                We offer best couses at lowest price .....
             </h2>
         </header>
     </main>
