--- a/2-element_tag_&_attribute.html
+++ b/2-element_tag_&_attribute.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Element Tag and Attribute </title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
-    <h1>I'm an element </h1> <!-- opening aur closing tag ke bich me Element(Content) rahta hai -->
-    <img src="https://th.bing.com/th/id/OIP.kfQpDUbqQpxDdHs4COHeIgHaF7?pid=ImgDet&rs=1" alt="fish" width="108">
-    <!-- "src" aur "alt" , 'Attributes' hai jo tags ko additional power deten hai.-->
+    <h1> I'm an element </h1> <!-- opening aur closing tag ke bich me Element(Content) rahta hai -->
+    <img src="https://th.bing.com/th/id/OIP.kfQpDUbqQpxDdHs4COHeIgHaF7?pid=ImgDet&rs=1" alt="fish" width="160" title="May chotasa pyarasa machli hun">
+    <!-- "src" aur "alt" , 'Attributes' hai jo tags ko "additional power" deten hai.-->
 </body>
 </html>
