--- a/4-emmet_and_speedy.html
+++ b/4-emmet_and_speedy.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emmet</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
-    <h1>Emmet</h1> <!-- h1 + enter -->
+
+<!-- ***** Emmet : Emmet is an essential development tool that helps you quickly create repetitive structures like lists, tables, or ordered elements with minimal typing. It is more like a shorthand that translates to multiple lines of HTML or a CSS attribute. Emmet is built-in in many of the text editors like VS Code. -->
+
+    <h1> Emmet </h1> <!-- h1 + enter -->
     <p>Lorem ipsum dolor sit ad?</p> <!-- p + Enter -->
-    <p class="mangu"></p> <!-- p.mango + Enter -->
+    <p class="mango"></p> <!-- p.mango + Enter -->
     <p id="lila"></p> <!-- p#lila + Enter -->
     <p class="mina">kya haal hai bhai?</p> <!-- p.mina{kya haal hai bhai?} + Enter -->
     <p id="tanisha">Tnisha is very good girl.</p> <!-- p#tanisha{Tnisha is very good girl} + Enter -->
-
+    <p class="myClass" id="myId">That's haw i creat element.</p>   <!-- p.myClass#myId{That's haw i creat element} -->
     <div>
         <p class="jimi">hi</p>
     </div>   <!-- div>p.jimi{hi} -->
+    <main>
+        <di class="lorem">
+            <p>munna bhai !</p>
+        </di>
+    </main>   <!-- main>di.lorem>p{munna bhai !} -->
 </body>
 </html>
