--- a/7-Inline_&_Block_element.html
+++ b/7-Inline_&_Block_element.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline and Block level element </title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
     <!-- Block level element : Aysa element jo pura ka pura block lele . ex : <div></div> , <h1></h1> , <p></p> -->
     <h1>Hello World</h1>
     <h1>hola world</h1>
+
+
+    
     <!-- Inline Element : Aysa element jo utna hi width le jitna jarurat hai ayse elements ko inline element kehten hai. ex : <span></span>  -->
     <span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
     <span>Lorem ipsum dolor sit amet.</span>
