--- a/9-Adding-image-on-website-using-existing-image-on-code-directory.html
+++ b/9-Adding-image-on-website-using-existing-image-on-code-directory.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adding image on website using existing image on webpage directory</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
     <h1>Fish Image</h1>
-    <img src="./fish-img.png" alt="fish image" width="700px" title="fish">
+    <img src="./fish-img.png" alt="fish image" width="400px" title="fish">
 </body>
 </html>
