--- a/some-special-attribute.html
+++ b/some-special-attribute.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some Special Attribut</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
     <!-- title="Discription" : Iska prayog kisi chij ke discription likhne kelie kiya jata hai. Jab people us chij par mouse ka courser laten hai tab us chij par title ke andar likha wala content show hota hai(content ka discription batlata hai) -->
