--- a/11-ancher_tag(website-me-link-daalna).html
+++ b/11-ancher_tag(website-me-link-daalna).html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ancher Tag</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
     <h1>Ancher Tag</h1>
-    <!-- Ancher tag me target="_blank" attribute ka prayog dusre window me, 'click kiye gaye link ko' open karnekeliye kiya jata hai. -->
-    <a href="https://www.google.com/">Google</a>
+
+    <!-- ///////////////////////////////////////////// -->
+    <!-- Ancher tag me target="_blank" attribute ka prayog karne se , 'click kiye gaye link ko' humlog "dusre window me" open karpaten hai. -->
+    <a href="#/">Google</a>
     <a href="https://twitter.com/" target="_blank">Tweeter</a>
 
+    <!-- ///////////////////////////////////////////// -->
     <h1>Image me link add karna</h1>
-    <a href="https://www.liveaquaria.com/" target="_blank"><img src="./fish-img.png" alt="fish" title="Click me to go Liveaquaria.com"></a>
+    <a href="https://www.liveaquaria.com/" target="_blank"><img src="./fish-img.png" alt="fish" title="Click me to go Liveaquaria.com"></a>   <!-- Aysa karese hamlog amage par click karne se link ko open karsakten hai. -->
 
+    <!-- //////////////////////////////////////////// -->
     <h1>Dusre Webpage ka link</h1>
-    <a href="linked-webpage-with-11th-tutorial.html" target="_blank">click me to open another webpage</a>
+    <a href="linked-webpage-with-11th-tutorial.html" target="_blank"> click me to open another webpage </a>
     
+    <!-- //////////////////////////////////////////// -->
     <h1>Email using ancher tag</h1>
     <a href="mailto:arahamabeddin7@gmail.com">Mail Us</a>
 
+    <!-- //////////////////////////////////////////// -->
     <h1>Downlode file using ancher tag</h1>
     <a href="file.pdf" download> Downlode my file </a>
 
