--- a/3-Entities.html
+++ b/3-Entities.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entities</title>
+    <title> Entities </title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
-                                            <!-- Entities in html -->
+            <!-- Entities in html -->
     <h1>Entities</h1>
     <p>5 &gt; 2</p>  <!-- This will print 5>2 -->
 </body>
 </html>
 
+<!-- Entities : An HTML entity is a piece of text ("string") that begins with an ampersand (&) and ends with a semicolon (;). Entities are frequently used to display reserved characters (which would otherwise be interpreted as HTML code), and invisible characters (like non-breaking spaces). You can also use them in place of other characters that are difficult to type with a standard keyboard. -->
 
 <!-- 
 
