--- a/6-(Incomplete)An_old_style_blog_app.html
+++ b/6-(Incomplete)An_old_style_blog_app.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
+    </style>
 </head>
 <body>
     
