--- a/8-Adding-image-on-website-using-google-link.html
+++ b/8-Adding-image-on-website-using-google-link.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image using google link </title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
     <h1>Fish Image</h1>
-    <img src="https://th.bing.com/th/id/R.123607cb7faeace406607721d9841adf?rik=HtJLvyGESLbQZg&pid=ImgRaw&r=0" alt="fish" width="500px" height="300px">
+    <img src="https://th.bing.com/th/id/R.123607cb7faeace406607721d9841adf?rik=HtJLvyGESLbQZg&pid=ImgRaw&r=0" alt="fish" width="500px" height="300px" title="fish">
 </body>
 </html>
