--- a/Subscript_&_Superscript.html
+++ b/Subscript_&_Superscript.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 'Subscript' and 'Superscript' </title>
-</head>
-<body>
-    <header>
-        <h1>Some basic formulae Algebra :</h1>
-    </header>
-    <main>
-        <pre>
-            <p>
-                (1). (a+b)<sup>2</sup> = ( a<sup>2</sup> + 2ab + b<sup>2</sup>)
-                (2). (a-b)<sup>2</sup> = ( a<sup>2</sup> - 2ab + b<sup>2</sup>)
-                (3). {(a+b)<sup>2</sup> + (a-b)<sup>2</sup>} = 2(a<sup>2</sup> + b<sup>2</sup>)
-                (4). {(a+b)<sup>2</sup> - (a-b)<sup>2</sup>} = 2ab
-                (5). (a+b)<sup>3</sup> = ( a<sup>3</sup> + 3a<sup>2</sup>b + 3ab<sup>2</sup> + b<sup>3</sup>) = { a<sup>3</sup> + 3ab(a+b) + b<sup>3</sup> }
-                (6). (a-b)<sup>3</sup> = ( a<sup>3</sup> - 3a<sup>2</sup>b + 3ab<sup>2</sup> - b<sup>3</sup>) = { a<sup>3</sup> - 3ab(a-b) - b<sup>3</sup> }
-                (7). (a<sup>2</sup> - b<sup>2</sup>) = (a+b).(a-b)
-                (8). (a<sup>3</sup> + b<sup>3</sup>) = (a+b).(a<sup>2</sup> - ab + b<sup>2</sup>)
-                (9). (a<sup>3</sup>- b<sup>3</sup>) = (a-b).(a<sup>2</sup> + ab + b<sup>2</sup>)
-            </p>
-        </pre>
-    </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>'Subscript' and 'Superscript'</title>
+    <!-- night Mode on -->
+    <style>
+      * {
+        background-color: #212121;
+        color: aqua;
+      }
+    </style>
+  </head>
+  <body>
+    <fieldset>
+      <header>
+        <h1>Some basic formulae Algebra :---</h1>
+      </header>
+      <main>
+        <p>(1). (a+b)<sup>2</sup> = ( a<sup>2</sup> + 2ab + b<sup>2</sup>)</p>
+
+        <p>(2). (a-b)<sup>2</sup> = ( a<sup>2</sup> - 2ab + b<sup>2</sup>)</p>
+
+        <p>
+          (3). {(a+b)<sup>2</sup> + (a-b)<sup>2</sup>} = 2(a<sup>2</sup>
+          +b<sup>2</sup>)
+        </p>
+
+        <p>(4). {(a+b)<sup>2</sup> - (a-b)<sup>2</sup>} = 2ab</p>
+
+        <p>
+          (5). (a+b)<sup>3</sup> = ( a<sup>3</sup> + 3a<sup>2</sup>b +
+          3ab<sup>2</sup>+ b<sup>3</sup>) = { a<sup>3</sup> + 3ab(a+b) + b<sup
+            >3</sup
+          >
+          }
+        </p>
+
+        <p>
+          (6). (a-b)<sup>3</sup> = ( a<sup>3</sup> - 3a<sup>2</sup>b + 3ab<sup
+            >2</sup
+          >
+          - b<sup>3</sup>) = { a<sup>3</sup> - 3ab(a-b) - b<sup>3</sup> }
+        </p>
+
+        <p>(7). (a<sup>2</sup> - b<sup>2</sup>) = (a+b).(a-b)</p>
+
+        <p>
+          (8). (a<sup>3</sup> + b<sup>3</sup>) = (a+b).(a<sup>2</sup> - ab +
+          b<sup>2</sup>)
+        </p>
+
+        <p>
+          (9). (a<sup>3</sup> - b<sup>3</sup>) = (a-b).(a<sup>2</sup> + ab +
+          b<sup>2</sup>)
+        </p>
+      </main>
+    </fieldset>
+  </body>
 </html>
