--- a/linked-webpage-with-11th-tutorial.html
+++ b/linked-webpage-with-11th-tutorial.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chipa huwa website</title>
+    <!-- night Mode on -->
+    <Style>
+        *{
+            background-color: #212121;
+            color: aqua;
+        }
+    </Style>
 </head>
 <body>
-    <h1>I'm headiing.</h1>
+    <h1>I'm heading.</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat animi ratione beatae tenetur. Nihil, unde nemo placeat ad provident vero. Libero exercitationem est ut at deserunt error aliquam quo officia.</p>
 </body>
 </html>
